c/examples/writing-a-c-compiler-tests/tests/chapter_5/valid/extra_credit/incr_in_binary_expr.c
int main(void) {
    int a = 2;
    int b = 3 + a++;
    int c = 4 + ++b;
    return (a == 3 && b == 6 && c == 10);
}