c/examples/writing-a-c-compiler-tests/tests/chapter_5/invalid_semantics/declared_after_use.c
int main(void) {
    a = 1 + 2;
    int a;
    return a;
}